--- a/404.html
+++ b/404.html
@@ -51,6 +51,8 @@
                     `https://cdn.kairoscloud.io/widget/form/WKzNHzEs0vwaY4hOpKLK?baseURL=${customEncodeURIComponent(
                         baseURL,
                     )}`;
+                // change page title to "Kairos Cloud Forms"
+                document.title = "Kairos Cloud Forms";
             } else {
                 document.getElementById("preview-iframe").src =
                     `https://app.kairoscloud.io/v2/preview/s04iG3TiqVlVb6BsSEl2?baseURL=${customEncodeURIComponent(
