Polish up telemetry stuff

--- a/AdminDashboard/index.html
+++ b/AdminDashboard/index.html
@@ -612,7 +612,7 @@
 
                 <div class="panel" id="telemetry-panel">
                     <div class="panel-header">
-                        <h2>Telemetry Errors (Firestore: errors)</h2>
+                        <h2>Errors</h2>
                         <div
                             id="telemetry-status"
                             class="status-indicator status-loading"
@@ -621,12 +621,7 @@
                         </div>
                     </div>
                     <div class="panel-content">
-                        <p>
-                            Displaying latest errors from<span
-                                id="telemetry-firestore-link"
-                            ></span>
-                            (max 100):
-                        </p>
+                        <p>From<span id="telemetry-firestore-link"></span></p>
                         <div id="telemetry-errors-list" class="error-list">
                             <p>Loading errors...</p>
                         </div>
