--- a/VideoProgress/index.html
+++ b/VideoProgress/index.html
@@ -70,14 +70,12 @@
                 position: relative;
             }
 
-            /* The vertical connecting line */
             .step:not(:last-child)::before {
                 content: "";
                 position: absolute;
-                /* Positioned to be centered with the new smaller circle */
-                left: 16.5px; /* (36px circle / 2) - (3px line / 2) */
-                top: 36px; /* Start after the circle */
-                width: 3px; /* --- MODIFIED: Thicker line --- */
+                left: 16.5px;
+                top: 36px;
+                width: 3px;
                 height: calc(100% - 20px);
                 background-color: var(--border-color);
                 transition: background-color 0.3s ease;
@@ -94,38 +92,31 @@
             }
 
             .circle {
-                width: 36px; /* --- MODIFIED: Smaller circle --- */
-                height: 36px; /* --- MODIFIED: Smaller circle --- */
+                width: 36px;
+                height: 36px;
                 border-radius: 50%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 font-weight: 600;
-                font-size: 1rem; /* Adjusted for smaller circle */
+                font-size: 1rem;
                 transition: all 0.3s ease;
-                position: relative; /* Needed for spinner pseudo-element */
-
-                /* Default/Not Started State */
+                position: relative;
                 background-color: var(--white);
                 border: 2px solid var(--border-color);
                 color: var(--gray);
             }
 
-            /* --- MODIFIED: Spinner logic for non-rotating text --- */
-            /* Static appearance of the circle while in progress */
             .step.in-progress .circle {
                 color: var(--black);
-                border-color: var(
-                    --border-color
-                ); /* Light gray border underneath spinner */
+                border-color: var(--border-color);
             }
 
-            /* The spinning overlay */
             .step.in-progress .circle::before {
                 content: "";
                 position: absolute;
-                top: -2px; /* Half of its own border-width to align */
-                left: -2px; /* Half of its own border-width to align */
+                top: -2px;
+                left: -2px;
                 width: 100%;
                 height: 100%;
                 border-radius: 50%;
@@ -147,35 +138,51 @@
             }
 
             .step-content {
-                padding-top: 0.3rem; /* Adjusted for smaller circle */
+                padding-top: 0.3rem;
                 padding-bottom: 2rem;
             }
 
             .step-title {
                 font-weight: 600;
                 margin: 0;
+                display: flex;
+                align-items: center;
             }
 
-            a {
-                color: var(--blue);
-                text-decoration: none;
-            }
-
-            .step-details {
-                margin-top: 0.75rem;
+            .timer-text {
                 color: var(--gray);
-                font-size: 0.9rem;
+                font-weight: 400;
+                font-size: 0.9em;
+                margin-top: 3px;
+                margin-left: 6px;
+            }
+
+            .final-actions-container {
                 display: none; /* Hidden by default */
+                margin-top: 1rem;
+                padding-top: 1.5rem;
+                border-top: 1px solid var(--border-color);
             }
 
-            .step-details a {
-                color: var(--blue);
-                font-weight: 600;
+            .final-actions-container a {
                 text-decoration: none;
+                font-weight: 600;
+                margin: 0 0.5rem;
             }
 
-            .step-details a:hover {
-                text-decoration: underline;
+            .download-button {
+                display: inline-block;
+                background-color: var(--blue);
+                color: var(--white);
+                padding: 0.6rem 1.2rem;
+                border-radius: 6px;
+                margin-top: 0.5rem;
+                transition: background-color 0.2s ease;
+            }
+
+            .download-button:hover {
+                background-color: #0056b3;
+                color: var(--white);
             }
         </style>
     </head>
@@ -202,46 +209,31 @@
                     <div class="step-content">
                         <p id="step2-title" class="step-title">
                             Video rendered
+                            <span id="render-timer" class="timer-text"></span>
                         </p>
-                    </div>
-                </li>
-
-                <!-- Step 3: Media Library -->
-                <li id="step3" class="step">
-                    <div class="step-indicator">
-                        <div class="circle">3</div>
-                    </div>
-                    <div class="step-content">
-                        <p class="step-title">Video added to media library</p>
-                        <div id="step3-details" class="step-details">
-                            <!-- Content injected by JavaScript -->
-                        </div>
                     </div>
                 </li>
             </ol>
 
+            <!-- This section is populated and shown by JS on completion -->
+            <div id="final-actions" class="final-actions-container"></div>
+
             <div id="error-container"></div>
         </div>
-
-        <!-- Firebase App (the core Firebase SDK) and Firestore must be included -->
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-        <script src="https://kairoscloud.github.io/main/globalFirebase.js?v3"></script>
 
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 const params = new URLSearchParams(window.location.search);
                 const shotstackId = params.get("id");
-                const locationId = params.get("location");
 
                 const errorContainer =
                     document.getElementById("error-container");
-                if (!shotstackId || !locationId) {
+                if (!shotstackId) {
                     errorContainer.innerHTML = `
                     <p class="error-message">
-                        <strong>Error:</strong> URL parameters 'id' and 'location' are required.
+                        <strong>Error:</strong> URL parameter 'id' is required.
                         <br>
-                        Example: ?id=your-video-id&location=your-location-id
+                        Example: ?id=your-video-id
                     </p>`;
                     document.querySelector("h1").textContent =
                         "Configuration Error";
@@ -250,47 +242,66 @@
 
                 // --- DOM Element References ---
                 const step2 = document.getElementById("step2");
-                const step3 = document.getElementById("step3");
                 const step2Title = document.getElementById("step2-title");
-                const step3Details = document.getElementById("step3-details");
+                const timerElement = document.getElementById("render-timer");
+                const finalActionsContainer =
+                    document.getElementById("final-actions");
+                let timerInterval;
 
                 const videoUrl = `https://shotstack-api-v1-output.s3.ap-southeast-2.amazonaws.com/rgrqdk03ju/${shotstackId}.mp4`;
 
-                /**
-                 * Changes the visual state of a step.
-                 * @param {HTMLElement} stepElement The step <li> element.
-                 * @param {'in-progress' | 'complete'} state The new state.
-                 */
                 function setStepState(stepElement, state) {
                     stepElement.classList.remove("in-progress", "complete");
                     stepElement.classList.add(state);
                 }
 
-                /**
-                 * Polls every 3 seconds to check if the Shotstack render is complete.
-                 */
+                function startRenderTimer() {
+                    const startTime = Date.now();
+                    timerElement.textContent = "0:00";
+
+                    timerInterval = setInterval(() => {
+                        const elapsedSeconds = Math.floor(
+                            (Date.now() - startTime) / 1000,
+                        );
+                        const minutes = Math.floor(elapsedSeconds / 60);
+                        const seconds = elapsedSeconds % 60;
+                        timerElement.textContent = `${minutes}:${seconds.toString().padStart(2, "0")}`;
+                    }, 1000);
+                }
+
                 async function checkRenderStatus() {
                     setStepState(step2, "in-progress");
+                    startRenderTimer();
 
                     const intervalId = setInterval(async () => {
                         try {
-                            // Use a HEAD request for efficiency - we don't need the file content
                             const response = await fetch(videoUrl, {
                                 method: "HEAD",
                             });
 
                             if (response.ok) {
                                 clearInterval(intervalId);
+                                clearInterval(timerInterval);
                                 console.log(
                                     "Step 2 Complete: Video is rendered.",
                                 );
+
                                 setStepState(step2, "complete");
+                                document.querySelector("h1").textContent =
+                                    "Render Complete!";
 
-                                // Link-ify the title text
-                                step2Title.innerHTML = `<a href="${videoUrl}" target="_blank" rel="noopener noreferrer">Video rendered</a>`;
+                                // Update title to be a link, keeping the timer text static
+                                step2Title.innerHTML = `
+                                    <a href="${videoUrl}" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">Video rendered</a>
+                                    <span class="timer-text">${timerElement.textContent}</span>
+                                `;
 
-                                // Proceed to the next check
-                                checkFirestoreStatus();
+                                // Display the final actions
+                                finalActionsContainer.innerHTML = `
+                                    <a href="${videoUrl}" target="_blank" rel="noopener noreferrer">Open Link</a>
+                                    <a href="${videoUrl}" class="download-button" download>Download Video</a>
+                                `;
+                                finalActionsContainer.style.display = "block";
                             } else {
                                 console.log("Polling for video render...");
                             }
@@ -299,66 +310,6 @@
                                 "Polling error for render status:",
                                 error,
                             );
-                        }
-                    }, 3000);
-                }
-
-                /**
-                 * Polls every 3 seconds to check if the video has been added to the media library (Firestore).
-                 * This function is only called after checkRenderStatus is successful.
-                 */
-                async function checkFirestoreStatus() {
-                    setStepState(step3, "in-progress");
-
-                    // Wait for Firebase to initialize from the external script
-                    await new Promise((resolve) => {
-                        const checkFirebase = setInterval(() => {
-                            if (window.firebase && window.firestore) {
-                                clearInterval(checkFirebase);
-                                resolve();
-                            }
-                        }, 100);
-                    });
-
-                    const db = window.firestore;
-                    const docRef = db
-                        .collection("video_uploads")
-                        .doc(shotstackId);
-
-                    const intervalId = setInterval(async () => {
-                        try {
-                            const doc = await docRef.get();
-
-                            if (doc.exists) {
-                                clearInterval(intervalId);
-                                const data = doc.data();
-                                console.log(
-                                    "Step 3 Complete: Document found in Firestore.",
-                                    data,
-                                );
-
-                                setStepState(step3, "complete");
-
-                                // Display the final details
-                                step3Details.innerHTML = `
-                                FileID: ${data.fileId}.
-                                <a href="https://app.kairoscloud.io/v2/location/${locationId}/media-storage" target="_blank" rel="noopener noreferrer">Open Media Library</a>
-                            `;
-                                step3Details.style.display = "block";
-                                document.querySelector("h1").textContent =
-                                    "Render Complete!";
-                            } else {
-                                console.log(
-                                    "Polling for Firestore document...",
-                                );
-                            }
-                        } catch (error) {
-                            console.error(
-                                "Polling error for Firestore status:",
-                                error,
-                            );
-                            // Optional: Stop polling on critical firestore errors
-                            // clearInterval(intervalId);
                         }
                     }, 3000);
                 }
