--- a/VideoProgress/index.html
+++ b/VideoProgress/index.html
@@ -172,7 +172,7 @@
 
             .download-button {
                 display: inline-block;
-                background-color: var(--blue);
+                background-color: #3182c2;
                 color: var(--white);
                 padding: 0.6rem 1.2rem;
                 border-radius: 6px;
@@ -298,7 +298,7 @@
 
                                 // Display the final actions
                                 finalActionsContainer.innerHTML = `
-                                    <a href="${videoUrl}" target="_blank" rel="noopener noreferrer">Open Link</a>
+                                    <a href="${videoUrl}" target="_blank" style="color: #3182C2" rel="noopener noreferrer">Open Link</a>
                                     <a href="${videoUrl}" class="download-button" download>Download Video</a>
                                 `;
                                 finalActionsContainer.style.display = "block";
