--- a/VideoProgress/index.html
+++ b/VideoProgress/index.html
@@ -299,7 +299,7 @@
                                 // Display the final actions
                                 finalActionsContainer.innerHTML = `
                                     <a href="${videoUrl}" target="_blank" style="color: #3182C2" rel="noopener noreferrer">Open Link</a>
-                                    <a class="download-button" onclick=downloadVideo("${videoURL}")>Download Video</a>
+                                    <a class="download-button" onclick=downloadVideo("${videoUrl}")>Download Video</a>
                                 `;
                                 finalActionsContainer.style.display = "block";
                             } else {
