--- a/VideoProgress/index.html
+++ b/VideoProgress/index.html
@@ -316,24 +316,25 @@
 
                 // Start the process
                 checkRenderStatus();
-
-                function downloadVideo(url) {
-                    // Generate a random 10-digit hex string
-                    const randomHex = [...Array(10)]
-                        .map(() => Math.floor(Math.random() * 16).toString(16))
-                        .join("");
-
-                    const fileName = `KairosCloud_${randomHex}.mp4`;
-
-                    // Create an anchor element and trigger download
-                    const a = document.createElement("a");
-                    a.href = url;
-                    a.download = fileName;
-                    document.body.appendChild(a);
-                    a.click();
-                    document.body.removeChild(a);
-                }
             });
+        </script>
+        <script>
+            function downloadVideo(url) {
+                // Generate a random 10-digit hex string
+                const randomHex = [...Array(10)]
+                    .map(() => Math.floor(Math.random() * 16).toString(16))
+                    .join("");
+
+                const fileName = `KairosCloud_${randomHex}.mp4`;
+
+                // Create an anchor element and trigger download
+                const a = document.createElement("a");
+                a.href = url;
+                a.download = fileName;
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            }
         </script>
     </body>
 </html>
